version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/ConstructionLines/Plane.rst.txt
.. vale off



:class:`Plane`
==============

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.ConstructionLines.Plane

   Bases: :py:obj:`object`


   
   A 2D sketching planes in a ConstructionLine instance.
















   ..
       !! processed by numpydoc !!




.. py:currentmodule:: Plane

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__eq__`
            - op_Equality method.
          * - :py:attr:`~__ne__`
            - op_Inequality method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~Equivalent`
            - Checks to see if another plane is equivalent to this one.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ConstructionLineId`
            - The ID of the associated ConstructionLine.
          * - :py:attr:`~Definition`
            - Definition property.
          * - :py:attr:`~IsRepresentation`
            - Check to see if there is a valid entity that this instance represents.
          * - :py:attr:`~Normal`
            - The plane's normal vector (Z axis orientation) orientation.
          * - :py:attr:`~ObjectId`
            - Get the ID of the represented entity.
          * - :py:attr:`~Origin`
            - The global location of this plane's origin.
          * - :py:attr:`~PrimaryAxisDirection`
            - The orientation of the plane's primary (X) axis orientation.
          * - :py:attr:`~SecondaryAxisDirection`
            - The orientation of the plane's secondary (Y) axis orientation.
          * - :py:attr:`~Type`
            - Type property.







Property detail
---------------
.. py:property:: ConstructionLineId
   :type: Optional[int]


   
   The ID of the associated ConstructionLine.
















   ..
       !! processed by numpydoc !!

.. py:property:: Definition
   :type: Optional[Any]


   
   Definition property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsRepresentation
   :type: Optional[bool]


   
   Check to see if there is a valid entity that this instance represents.
















   ..
       !! processed by numpydoc !!

.. py:property:: Normal
   :type: Optional[Ansys.ACT.Core.Math.Vector3D]


   
   The plane's normal vector (Z axis orientation) orientation.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   Get the ID of the represented entity.
















   ..
       !! processed by numpydoc !!

.. py:property:: Origin
   :type: Optional[Ansys.ACT.Core.Math.Point3D]


   
   The global location of this plane's origin.
















   ..
       !! processed by numpydoc !!

.. py:property:: PrimaryAxisDirection
   :type: Optional[Ansys.ACT.Core.Math.Vector3D]


   
   The orientation of the plane's primary (X) axis orientation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SecondaryAxisDirection
   :type: Optional[Ansys.ACT.Core.Math.Vector3D]


   
   The orientation of the plane's secondary (Y) axis orientation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[Ansys.Mechanical.DataModel.ConstructionLines.PlaneType]


   
   Type property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(other: Ansys.Mechanical.DataModel.ConstructionLines.Plane) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equivalent(other: Ansys.Mechanical.DataModel.ConstructionLines.Plane) -> bool

   
   Checks to see if another plane is equivalent to this one.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!

.. py:method:: __eq__(left: Ansys.Mechanical.DataModel.ConstructionLines.Plane, right: Ansys.Mechanical.DataModel.ConstructionLines.Plane) -> bool
   :classmethod:


   
   op_Equality method.

   ..
       !! processed by numpydoc !!

.. py:method:: __ne__(left: Ansys.Mechanical.DataModel.ConstructionLines.Plane, right: Ansys.Mechanical.DataModel.ConstructionLines.Plane) -> bool
   :classmethod:


   
   op_Inequality method.

   ..
       !! processed by numpydoc !!



.. vale on